...
      ),
      body: ListView(
        padding: const EdgeInsets.fromLTRB(20, 12, 20, 24),
        children: [
          TextField(
            controller: _nameController,
            decoration: const InputDecoration(labelText: 'ルールセット名'),
          ),
          const SizedBox(height: 16),
          TextField(
            controller: _ownerNameController,
            decoration: const InputDecoration(labelText: 'オーナー名'),
          ),
...
